--- a/wp-content/themes/intrepid/css/templates/about-main.scss
+++ b/wp-content/themes/intrepid/css/templates/about-main.scss
@@ -1,96 +1,121 @@
-.landing-hero{
-    padding: 240px 0 95px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
+.landing-hero {
     position: relative;
+    padding: 240px 0 95px;
+    background-color: $dark-gray;
+
     @media #{$phone} {
-        padding:0;
-     }
-    .container{
+        padding: 0;
+    }
+
+    .container {
+        position: static;
         max-width: 820px;
-        display:flex;
+        display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         @media #{$phone} {
             flex-direction: column;
-            padding:0;
-         }
-    }
-    &:before{
-        content:"";
-        display: block;
-        width:100%;
-        height: 100%;
-        position: absolute;
-        left:0;
-        top:0;
-        background: -moz-linear-gradient(left, rgba(31,34,37,0.9) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(left, rgba(31,34,37,0.9) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to right, rgba(31,34,37,0.9) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e61f2225', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+            padding: 0;
+        }
     }
 }
 
-.landing-hero--alt{
-    &:before{
-        background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(31,34,37,0.9) 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(31,34,37,0.9) 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(31,34,37,0.9) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#e61f2225',GradientType=1 ); /* IE6-9 */
-    }
-}
+.landing-hero__item {
 
-.landing-hero__item{
-    position: relative;
-    @media only screen and (min-width: 768px) {
-        background-image: none !important;
-    }
     @media #{$phone} {
+        position: relative;
         display: flex;
         align-items: center;
         min-height: calc(100vh - 71px);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-     }
-    &:before{
-        content:"";
-        display: none;
+    }
+
+    //&:before {
+    //    content: "";
+    //    display: none;
+    //    width: 100%;
+    //    height: 100%;
+    //    position: absolute;
+    //    top: 0;
+    //    left: 0;
+    //    background-color: rgba(31, 34, 37, 0.6);
+    //    @media #{$phone} {
+    //        display: block;
+    //    }
+    //}
+
+    &:nth-child(2) {
+
+        .landing-hero__item-bg {
+
+            &:before {
+                background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(31, 34, 37, 0.9) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+                @media #{$phone} {
+                    background: rgba(31, 34, 37, 0.6);
+                }
+            }
+        }
+    }
+}
+
+.landing-hero__item-bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    transition: 0.5s ease;
+    z-index: 1;
+    opacity: 0;
+
+    @media #{$phone} {
+        opacity: 1;
+    }
+
+    .landing-hero__item--active & {
+        opacity: 1;
+    }
+
+    &:before {
+        content: "";
+        display: block;
         width: 100%;
         height: 100%;
         position: absolute;
-        top:0;
-        left:0;
-        background-color:rgba(31, 34, 37, 0.6);
+        left: 0;
+        top: 0;
+        background: linear-gradient(to right, rgba(31, 34, 37, 0.9) 0%, rgba(0, 0, 0, 0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        z-index: 2;
+
         @media #{$phone} {
-            display: block;
-         }
+            background: rgba(31, 34, 37, 0.6);
+        }
     }
 }
 
-.landing-hero__content{
+.landing-hero__content {
     max-width: 280px;
     text-align: center;
     position: relative;
-    z-index: 1;
+    padding-bottom: 42px;
+    z-index: 3;
+    opacity: .5;
+    transition: 0.5s ease;
+
     @media #{$phone} {
         margin: 0 auto;
-     }
-     .btn{
-        @media #{$phone} {
-            color:$white;
-        }
-        &:hover,
-        &:active,
-        &:focus {
-        border-color:$primary-color;
-        background-color: $primary-color;
-        }     
+        opacity: 1;
+    }
+
+    .landing-hero__item--active & {
+        opacity: 1;
     }
 }
 
-.landing-hero__title{
+.landing-hero__title {
     text-transform: uppercase;
     color: $white;
     letter-spacing: 4.8px;
@@ -101,32 +126,33 @@
     @media #{$phone} {
         letter-spacing: 3.8px;
         @include fsz(16px);
-    }    
-    &:after{
-        content:"";
+    }
+
+    &:after {
+        content: "";
         display: block;
         height: 1px;
-        width:195px;
+        width: 195px;
         background-color: $white;
         position: absolute;
-        bottom:0;
+        bottom: 0;
         left: 50%;
         margin-left: -98px;
     }
 }
 
-.landing-hero__description{
-    color:$white;
+.landing-hero__description {
+    color: $white;
     margin-bottom: 23px;
     @media #{$phone} {
         @include fsz(14px);
-     }
+    }
 }
 
-.landing-hero__intro{
+.landing-hero__intro {
     letter-spacing: 2.6px;
     @include fsz(11px);
-    color:$white;
+    color: $white;
     font-weight: 700;
     text-transform: uppercase;
     margin-top: 110px;
@@ -134,6 +160,8 @@
     text-align: center;
     position: relative;
     width: 100%;
+    z-index: 3;
+
     @media #{$phone} {
         background-color: $bright-gray;
         @include fsz(12px);
@@ -141,27 +169,46 @@
         margin-top: 0;
         line-height: 1.7;
     }
-    &:before{
-        content:"";
+
+    &:before {
+        content: "";
         height: 1px;
         background-color: white;
         width: 280px;
         position: absolute;
         top: -16px;
         left: 50%;
-        margin-left:-140px;
+        margin-left: -140px;
         @media #{$phone} {
             display: none;
         }
     }
 }
 
-.landing-hero__content--fade{
-    opacity: 0.5;
-    @media #{$phone} {
-        opacity: 1;
-     }
-    .btn{
-        color:$white;
+.landing-hero__link {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+
+    .btn {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate3d(-50%, 0, 0);
+        white-space: nowrap;
+
+        .landing-hero__item--active & {
+            background-color: $white;
+            color: $dark-gray;
+
+            @media #{$phone} {
+                background-color: transparent;
+                color: $white;
+            }
+        }
     }
 }
