--- a/wp-content/themes/intrepid/css/templates/about.scss
+++ b/wp-content/themes/intrepid/css/templates/about.scss
@@ -1,22 +1,26 @@
-.primary-block{
-    padding:114px 0 55px;
+.primary-block {
+    padding: 114px 0 55px;
     z-index: 2;
     position: relative;
-    &.primary-block--dark{
-        background-color:$dark-gray;
-        color:$white;
-        .container{
+
+    &.primary-block--dark {
+        background-color: $dark-gray;
+        color: $white;
+
+        .container {
             flex-direction: row;
         }
-        .primary-block__content{
+
+        .primary-block__content {
             text-align: right;
-            padding-bottom:80px;
+            padding-bottom: 80px;
             @media #{$phone}{
                 text-align: center;
                 padding-bottom: 0;
             }
         }
-        .primary-block__sticky-box{
+
+        .primary-block__sticky-box {
             left: 130px;
             right: auto;
             @media #{$phone}{
@@ -29,6 +33,7 @@
             }
         }
     }
+
     @media #{$header}{
         padding: 80px 0 55px;
     }
@@ -38,7 +43,8 @@
     @media #{$phone-small}{
         padding: 0;
     }
-    .container{
+
+    .container {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -50,7 +56,7 @@
     }
 }
 
-.primary-block__image{
+.primary-block__image {
     width: 32.2%;
     @media #{$header}{
         width: 42.2%;
@@ -59,7 +65,8 @@
         width: 100%;
         margin-bottom: 30px;
     }
-    img{
+
+    img {
         @media #{$phone}{
             margin: 0 auto;
         }
@@ -67,7 +74,7 @@
 
 }
 
-.primary-block__content{
+.primary-block__content {
     width: 59.4%;
     padding-bottom: 10px;
     @media #{$header}{
@@ -84,14 +91,15 @@
     }
 }
 
-.primary-block__description{
+.primary-block__description {
     line-height: 1.8;
     margin-bottom: 28px;
     @media #{$phone}{
         @include fsz(14px);
     }
 }
-.primary-block__title{
+
+.primary-block__title {
     @include fsz(35px);
     font-weight: 400;
     text-transform: uppercase;
@@ -103,7 +111,8 @@
         @include fsz(24px);
         width: 100%;
     }
-    strong{
+
+    strong {
         font-weight: 700;
         @media #{$phone}{
             display: inline-block;
@@ -111,7 +120,7 @@
     }
 }
 
-.primary-block__sticky-box{
+.primary-block__sticky-box {
     position: absolute;
     background-color: #F4F4F4;
     color: $dark-gray;
@@ -125,10 +134,15 @@
     right: 120px;
     line-height: 2.1;
     width: 100%;
-    strong{
-        display: block;
-        margin-top: 30px;
+
+    p {
+        margin-bottom: 30px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
+
     @media #{$phone}{
         position: relative;
         margin: -20px auto;
@@ -140,63 +154,69 @@
     @media #{$phone-small}{
         margin: -20px 10px;
     }
-    &.primary-block__sticky-box--dark{
+
+    &.primary-block__sticky-box--dark {
         background-color: $bright-gray;
-        color:$white
+        color: $white
     }
 }
 
-.custom-tab{
+.custom-tab {
     background-size: cover;
     background-repeat: no-repeat;
-    padding:300px 0 100px;
-    color:$white;
+    padding: 300px 0 100px;
+    color: $white;
     position: relative;
     @media #{$phone}{
-        padding:300px 0 30px;
+        padding: 300px 0 30px;
     }
-    &:before{
-        content:"";
+
+    &:before {
+        content: "";
         display: block;
-        width:100%;
+        width: 100%;
         height: 100%;
         position: absolute;
-        left:0;
-        top:0;
-        background: -moz-linear-gradient(45deg, rgba(0,0,0,0.95) 0%, rgba(0,0,0,0.77) 46%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(45deg, rgba(0,0,0,0.95) 0%,rgba(0,0,0,0.77) 46%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(45deg, rgba(0,0,0,0.95) 0%,rgba(0,0,0,0.77) 46%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+        left: 0;
+        top: 0;
+        background: -moz-linear-gradient(45deg, rgba(0, 0, 0, 0.95) 0%, rgba(0, 0, 0, 0.77) 46%, rgba(0, 0, 0, 0) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(45deg, rgba(0, 0, 0, 0.95) 0%, rgba(0, 0, 0, 0.77) 46%, rgba(0, 0, 0, 0) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(45deg, rgba(0, 0, 0, 0.95) 0%, rgba(0, 0, 0, 0.77) 46%, rgba(0, 0, 0, 0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f2000000', endColorstr='#00000000', GradientType=1); /* IE6-9 fallback on horizontal gradient */
         @media #{$phone} {
-            background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.85) 71%, rgba(0,0,0,0.95) 100%); /* FF3.6-15 */
-            background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.85) 71%,rgba(0,0,0,0.95) 100%); /* Chrome10-25,Safari5.1-6 */
-            background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.85) 71%,rgba(0,0,0,0.95) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
+            background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.85) 71%, rgba(0, 0, 0, 0.95) 100%); /* FF3.6-15 */
+            background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.85) 71%, rgba(0, 0, 0, 0.95) 100%); /* Chrome10-25,Safari5.1-6 */
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.85) 71%, rgba(0, 0, 0, 0.95) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#f2000000', GradientType=0); /* IE6-9 */
         }
     }
-    &.custom-tab--alignright:before{
-        background: -moz-linear-gradient(-45deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.77) 54%, rgba(0,0,0,0.95) 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(-45deg, rgba(0,0,0,0) 0%,rgba(0,0,0,0.77) 54%,rgba(0,0,0,0.95) 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(135deg, rgba(0,0,0,0) 0%,rgba(0,0,0,0.77) 54%,rgba(0,0,0,0.95) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+    &.custom-tab--alignright:before {
+        background: -moz-linear-gradient(-45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.77) 54%, rgba(0, 0, 0, 0.95) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(-45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.77) 54%, rgba(0, 0, 0, 0.95) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(135deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.77) 54%, rgba(0, 0, 0, 0.95) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#f2000000', GradientType=1); /* IE6-9 fallback on horizontal gradient */
     }
-    .container{
+
+    .container {
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
     }
-    &.custom-tab--alignright .container{
+
+    &.custom-tab--alignright .container {
         justify-content: flex-end;
     }
 }
 
-.custom-tab__wrap{
+.custom-tab__wrap {
     max-width: 780px;
     overflow: hidden;
     @media #{$phone}{
         text-align: center;
     }
-    .custom-tab--alignright &{
+
+    .custom-tab--alignright & {
         text-align: right;
         @media #{$phone}{
             text-align: center;
@@ -204,7 +224,7 @@
     }
 }
 
-.custom-tab__title{
+.custom-tab__title {
     @include fsz(20px);
     letter-spacing: 4.8px;
     text-transform: uppercase;
@@ -216,137 +236,154 @@
     }
 }
 
-.custom-tab__nav{
-    padding-top: 3px;
+.custom-tab__nav {
     display: inline-block;
     margin-bottom: 25px;
     position: relative;
     max-width: 555px;
     width: 100%;
-    &:before{
-        content:"";
+
+    &:before {
+        content: "";
         position: absolute;
-        top:0;
-        left:0;
-        width:100%;
-        height:3px;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 3px;
         background-color: rgba(255, 255, 255, 0.12);
     }
 }
-.custom-tab__nav-item{
+
+.custom-tab__nav-item {
     @include fsz(11px);
     letter-spacing: 2.6px;
     text-transform: uppercase;
     display: inline-block;
     margin-right: 26px;
-    &:last-child{
+
+    &:last-child {
         margin-right: 0;
     }
-    a{
-        color:rgba($white, 0.5);
-        padding: 10px 4px;
+
+    a {
+        color: rgba($white, 0.5);
+        padding: 13px 4px 10px;
         font-weight: 700;
         display: inline-block;
         position: relative;
-        &.active{
-            color:$white;
-            &:before{
-                content:"";
+
+        &.active {
+            color: $white;
+
+            &:before {
+                content: "";
                 display: block;
                 position: absolute;
-                top: -3px;
-                left:0;
+                top: 0;
+                left: 0;
                 width: 100%;
                 height: 3px;
                 background-color: $white;
+                z-index: 2;
             }
         }
     }
-    
+
 }
 
-.custom-tab__content-item{
+.custom-tab__content-item {
     display: none;
-    &.active{
+
+    &.active {
         display: block;
     }
 }
 
-.media-content{
+.media-content {
     padding: 85px 0 0;
     overflow: hidden;
-    .container{
+
+    .container {
         border-bottom: 1px solid $dark-gray;
     }
-    &.media-content--dark{
-      padding: 140px 0 0;
-      background-color:$dark-gray;
-      color:$white;
+
+    &.media-content--dark {
+        padding: 140px 0 0;
+        background-color: $dark-gray;
+        color: $white;
         @media #{$phone}{
             padding: 55px 0 20px;
         }
-        .container{
+
+        .container {
             border-bottom: none;
         }
     }
+
     @media #{$phone}{
         padding: 55px 0 20px;
     }
 }
 
-.media-content__item{
+.media-content__item {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 64px;
     align-items: center;
-    &.media-content__item--sticky-image{
+
+    &.media-content__item--sticky-image {
         margin-bottom: 340px;
         align-items: flex-end;
         @media #{$phone}{
             margin-bottom: 65px;
         }
-        .media-content__details{
+
+        .media-content__details {
             margin-bottom: 90px;
             @media #{$phone}{
                 margin-bottom: 0;
             }
         }
-        &:nth-child(2n){
+
+        &:nth-child(2n) {
             flex-direction: row-reverse;
             justify-content: flex-end;
             margin-bottom: 75px;
             @media #{$phone}{
                 margin-bottom: 65px;
             }
-            .media-content__details{
+
+            .media-content__details {
                 margin-right: 20px;
                 padding-right: 30px;
             }
         }
     }
-    &:nth-child(2n){
+
+    &:nth-child(2n) {
         flex-direction: row-reverse;
         margin-bottom: 65px;
     }
 }
 
-.media-content__thumbnail{
+.media-content__thumbnail {
     width: 40.7%;
     position: relative;
     @media #{$phone}{
         width: 100%;
         margin-bottom: 23px;
     }
-    img{
+
+    img {
         @media #{$phone}{
-           border:1px solid $dusty-gray;
-           margin: 0 auto;
+            border: 1px solid $dusty-gray;
+            margin: 0 auto;
         }
     }
 }
 
-.thumbnail-sticky{
+.thumbnail-sticky {
     width: 375px;
     height: 235px;
     position: absolute;
@@ -360,18 +397,20 @@
     @media #{$phone}{
         display: none;
     }
-    &--bottom-right{
+
+    &--bottom-right {
         top: calc(100% - 30px);
         left: 60%;
     }
-    &--top-right{
+
+    &--top-right {
         top: auto;
         left: 43%;
         bottom: calc(100% - 30px);
     }
 }
 
-.media-content__details{
+.media-content__details {
     width: 49.2%;
     @media #{$phone}{
         width: 100%;
@@ -379,7 +418,7 @@
     }
 }
 
-.media-content__title{
+.media-content__title {
     @include fsz(26px);
     text-transform: uppercase;
     margin-bottom: 7px;
@@ -389,7 +428,7 @@
     }
 }
 
-.media-content__description{
+.media-content__description {
     line-height: 1.8;
     @media #{$phone}{
         @include fsz(14px);
