--- a/wp-content/themes/intrepid/css/templates/portal-gallery.scss
+++ b/wp-content/themes/intrepid/css/templates/portal-gallery.scss
@@ -13,6 +13,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    position: relative;
 
     @media (max-width: 1024px) {
         padding-bottom: calc(320/560 * 33.33%);
@@ -24,6 +25,14 @@
         margin: 0 0 15px;
         padding-bottom: calc(360/560 * 100%);
     }
+}
+
+.portal-gallery__play-btn{
+    width: 100%;
+    height: 100%;
+    background: url(images/video-play.png) no-repeat center;
+    position: absolute;
+    background-size: 50px 50px;
 }
 
 .portal-gallery__nav {
