--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -34,6 +34,56 @@
         }
     }
 
+    &.hero--inner {
+        .hero__title {
+            margin-right: 26px;
+            margin-bottom: 0;
+            font-size: 35px;
+
+            @media #{$phone} {
+                margin: 0;
+                padding: 0;
+                width: 100%;
+                font-size: 22px;
+                text-align: center;
+            }
+
+            &:before {
+                display: none;
+
+            }
+
+            &:after {
+                display: none;
+            }
+        }
+
+        .hero__description {
+            position: relative;
+            padding-left: 21px;
+            font-size: 15px;
+            max-width: 615px;
+            color: #FFFFFF;
+            letter-spacing: 3.62px;
+            text-transform: uppercase;
+
+            @media #{$phone} {
+                display: none;
+            }
+
+            &:before {
+                content: '';
+                position: absolute;
+                height: 64px;
+                width: 1px;
+                top: 50%;
+                left: 0;
+                transform: translate3d(0, -50%, 0);
+                background-color: $dusty-gray;
+            }
+        }
+    }
+
     .hero__title {
         text-transform: uppercase;
         color: $white;
@@ -41,10 +91,12 @@
         line-height: 1;
         position: relative;
         max-width: 655px;
+
         @media #{$phone} {
             @include fsz(45px);
         }
-        @media #{$phone-small} {
+
+        @media #{$phone} {
             @include fsz(40px);
         }
 
@@ -56,7 +108,7 @@
             background-color: $white;
             position: absolute;
             top: -13px;
-            left: -105px;
+            left: 0;
             @media #{$phone} {
                 display: none;
             }
@@ -112,7 +164,7 @@
             right: auto;
             left: 270px;
         }
-        @media #{$phone-small} {
+        @media #{$phone} {
             right: 10px;
             left: auto;
         }
@@ -141,7 +193,7 @@
         right: auto;
         left: 270px;
     }
-    @media #{$phone-small} {
+    @media #{$phone} {
         right: 10px;
         left: auto;
     }
@@ -174,47 +226,6 @@
 
         @media #{$phone} {
             width: 100%;
-        }
-    }
-
-    .hero__title {
-        margin-right: 21px;
-        margin-bottom: 0;
-        padding-right: 26px;
-        font-size: 35px;
-        @media #{$phone} {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            font-size: 22px;
-            text-align: center;
-        }
-
-        &:before {
-            background-color: $dusty-gray;
-            height: 184%;
-            width: 1px;
-            top: -45%;
-            left: auto;
-            right: 0;
-            @media #{$phone} {
-                display: none;
-            }
-        }
-
-        &:after {
-            display: none;
-        }
-    }
-
-    .hero__description {
-        font-size: 15px;
-        max-width: 615px;
-        color: #FFFFFF;
-        letter-spacing: 3.62px;
-        text-transform: uppercase;
-        @media #{$phone} {
-            display: none;
         }
     }
 }
