--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -325,7 +325,7 @@
     align-items: flex-start;
     justify-content: center;
     flex-wrap: wrap;
-    @media #{$phone-small} {
+    @media #{$phone} {
         padding: 0 10px 30px;
     }
 
