--- a/wp-content/themes/intrepid/css/templates/news.scss
+++ b/wp-content/themes/intrepid/css/templates/news.scss
@@ -157,7 +157,7 @@
     @media #{$header} {
       padding:0 20px;
     }
-    @media #{$phone-small} {
+    @media #{$phone} {
       padding:0 10px;
     }
   }
