--- a/wp-content/themes/intrepid/css/templates/about.scss
+++ b/wp-content/themes/intrepid/css/templates/about.scss
@@ -162,11 +162,14 @@
 }
 
 .custom-tab {
+    position: relative;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center top;
     padding: 300px 0 100px;
     color: $white;
-    position: relative;
+    z-index: 1;
+
     @media #{$phone}{
         padding: 300px 0 30px;
     }
@@ -179,29 +182,23 @@
         position: absolute;
         left: 0;
         top: 0;
-        background: -moz-linear-gradient(45deg, rgba(0, 0, 0, 0.95) 0%, rgba(0, 0, 0, 0.77) 46%, rgba(0, 0, 0, 0) 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(45deg, rgba(0, 0, 0, 0.95) 0%, rgba(0, 0, 0, 0.77) 46%, rgba(0, 0, 0, 0) 100%); /* Chrome10-25,Safari5.1-6 */
         background: linear-gradient(45deg, rgba(0, 0, 0, 0.95) 0%, rgba(0, 0, 0, 0.77) 46%, rgba(0, 0, 0, 0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f2000000', endColorstr='#00000000', GradientType=1); /* IE6-9 fallback on horizontal gradient */
+        z-index: 2;
+
         @media #{$phone} {
-            background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.85) 71%, rgba(0, 0, 0, 0.95) 100%); /* FF3.6-15 */
-            background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.85) 71%, rgba(0, 0, 0, 0.95) 100%); /* Chrome10-25,Safari5.1-6 */
             background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.85) 71%, rgba(0, 0, 0, 0.95) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#f2000000', GradientType=0); /* IE6-9 */
         }
     }
 
     &.custom-tab--alignright:before {
-        background: -moz-linear-gradient(-45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.77) 54%, rgba(0, 0, 0, 0.95) 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(-45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.77) 54%, rgba(0, 0, 0, 0.95) 100%); /* Chrome10-25,Safari5.1-6 */
         background: linear-gradient(135deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.77) 54%, rgba(0, 0, 0, 0.95) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#f2000000', GradientType=1); /* IE6-9 fallback on horizontal gradient */
     }
 
     .container {
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
+        z-index: 10;
     }
 
     &.custom-tab--alignright .container {
@@ -295,6 +292,41 @@
     &.active {
         display: block;
     }
+}
+
+.custom-tab__bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center top;
+    background-repeat: no-repeat;
+    z-index: 1;
+    pointer-events: none;
+    overflow: hidden;
+    transition: 0.5s ease;
+    opacity: 0;
+
+    &.active {
+        opacity: 1;
+    }
+}
+
+.custom-tab__bg-video {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: 1;
+}
+
+.custom-tab__content-item--inner {
+    position: relative;
+    z-index: 2;
 }
 
 .media-content {
