fix up news page

--- a/wp-content/themes/intrepid/css/global/buttons.scss
+++ b/wp-content/themes/intrepid/css/global/buttons.scss
@@ -72,6 +72,10 @@ button[type="submit"] {
         }
     }
 
+    &--outline-dark {
+        border-color: $dark-gray;
+    }
+
     &--light {
         color: $white;
 
