--- a/wp-content/themes/intrepid/css/templates/events.scss
+++ b/wp-content/themes/intrepid/css/templates/events.scss
@@ -115,5 +115,14 @@
      }
 }
 
+.no-events {
 
+}
 
+.no-events__newsletter {
+    max-width: 420px;
+
+    p {
+        margin-bottom: 10px;
+    }
+}
