--- a/wp-content/themes/intrepid/css/templates/home.scss
+++ b/wp-content/themes/intrepid/css/templates/home.scss
@@ -1,328 +1,400 @@
-.main{
-  padding-top: 84px;
-  @media #{$header} {
-    padding-top: 70px;
-  }
-}
-.intro-block{
-  padding: 33px 0 28px;
-  background-color: $dark-gray;
-  @media #{$phone} {
-    padding: 33px 0 58px;
-  }
-  .container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    @media #{$phone} {
-      flex-wrap: wrap;
-    }
-  }
-  .intro-block__title{
-    padding:48px 70px;
-    max-width: 600px;
-    @include fsz(15px);
-    color: $silver;
-    text-transform: uppercase;
-    letter-spacing: 3.5px;
-    text-align: center;
-    line-height: 1.3;
-    margin-bottom: 0;
-    border-right: 2px solid $black;
-    margin-right: 45px;
+.main {
+    padding-top: 84px;
     @media #{$header} {
-      padding:48px 40px;
+        padding-top: 70px;
     }
-    @media #{$phone} {
-      padding: 10px 10px 30px;
-      @include fsz(14px);
-      border-right: none;
-      margin-right: 0;
-      margin-bottom: 33px;
-    }
-    &:after{
-      content:"";
-      display: none;
-      width: 280px;
-      height: 1px;
-      background-color: $black;
-      position: absolute;
-      bottom: 55px;
-      left:50%;
-      margin-left:-140px;
-      @media #{$phone} {
-        display: block;
-      }
-    }
-    strong{
-      color:$white;
-    }
-  }
 }
 
-.icon-link{
-  font-weight: 700;
-  letter-spacing: 3.5px;
-  text-transform: uppercase;
-  @include fsz(15px);
-  display: inline-block;
-  color:$white;
-  @media #{$header} {
-    text-align: center;
-  }
-  @media #{$phone} {
-    padding-left: 55px;
-    position: relative;
-    @include fsz(14px);
-  }
-  &:before{
-    content:"";
-    display: block;
-    width: 69px;
-    height: 70px;
-    background: url("images/model-icon.png") no-repeat center center;
-    background-size: cover;
-    margin: 0 auto 15px;
+.intro-block {
+    padding: 33px 0 28px;
+    background-color: $dark-gray;
     @media #{$phone} {
-      width: 35px;
-      height: 36px;
-      position: absolute;
-      top: -7px;
-      left: 0;
+        padding: 33px 0 58px;
     }
-  }
-  &:hover,
-  &:focus{
-    opacity: 0.5;
-  }
+
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        @media #{$phone} {
+            flex-wrap: wrap;
+        }
+    }
+
+    .intro-block__title {
+        padding: 48px 70px;
+        max-width: 600px;
+        @include fsz(15px);
+        color: $silver;
+        text-transform: uppercase;
+        letter-spacing: 3.5px;
+        text-align: center;
+        line-height: 1.3;
+        margin-bottom: 0;
+        border-right: 2px solid $black;
+        margin-right: 45px;
+        @media #{$header} {
+            padding: 48px 40px;
+        }
+        @media #{$phone} {
+            padding: 10px 10px 30px;
+            @include fsz(14px);
+            border-right: none;
+            margin-right: 0;
+            margin-bottom: 33px;
+        }
+
+        &:after {
+            content: "";
+            display: none;
+            width: 280px;
+            height: 1px;
+            background-color: $black;
+            position: absolute;
+            bottom: 55px;
+            left: 50%;
+            margin-left: -140px;
+            @media #{$phone} {
+                display: block;
+            }
+        }
+
+        strong {
+            color: $white;
+        }
+    }
 }
 
-.grid-block{
-  padding:87px 0 74px;
-  background-color: #E8E8E8;
-  @media #{$header} {
-    padding:40px 0 20px;
-  }
-  @media #{$phone} {
-    padding:10px 0 7px;
-  }
-  .container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .grid-block__item{
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    height: 407px;
-    margin-bottom: 22px;
-    color:$white;
-    @media #{$phone} {
-      margin-bottom: 10px;
-    }
-    &:before{
-      content:"";
-      display: block;
-      width: 100%;
-      height: 70%;
-      position: absolute;
-      bottom:0;
-      left:0;
-      background: -moz-linear-gradient(top, rgba(255,255,255,0) 21%, rgba(31,34,37,0.83) 59%, rgba(31,34,37,1) 100%); /* FF3.6-15 */
-      background: -webkit-linear-gradient(top, rgba(255,255,255,0) 21%,rgba(31,34,37,0.83) 59%,rgba(31,34,37,1) 100%); /* Chrome10-25,Safari5.1-6 */
-      background: linear-gradient(to bottom, rgba(255,255,255,0) 21%,rgba(31,34,37,0.83) 59%,rgba(31,34,37,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#1f2225',GradientType=0 ); /* IE6-9 */
-    }
-    &--1{
-      width: calc(50% - 10px);
-      @media #{$phone} {
-        width: 100%;
-        height: 450px;
-      }
-      &:before{
-        height: 80%;
-      }
-    }
-    &--2{
-      width: calc(50% - 10px);
-      @media #{$phone} {
-        width: 100%;
-        height: 450px;
-      }
-      &:before{
-        height: 80%;
-      }
-    }
-    &--3{
-      width: 40.7%;
-      height: 337px;
-      @media #{$header} {
-        width: calc(33.3% - 13px);
-      }
-      @media #{$phone} {
-        width: 100%;
-        height: 450px;
-      }
-    }
-    &--4{
-      width: 32.2%;
-      height: 337px;
-      @media #{$header} {
-        width: calc(33.3% - 13px);
-      }
-      @media #{$phone} {
-        width: 100%;
-        height: 450px;
-      }
-    }
-    &--5{
-      width: 23.7%;
-      height: 337px;
-      @media #{$header} {
-        width: calc(33.3% - 13px);
-      }
-      @media #{$phone} {
-        width: 100%;
-        height: 450px;
-      }
-    }
-  }
-  .grid-block__content{
-    padding:26px 44px;
-    position: absolute;
-    bottom:0;
-    left:0;
-    @media #{$desktop-small} {
-      padding:25px;
-    }
-    @media #{$phone} {
-      text-align: center;
-      width: 100%;
-    }
-  }
-  .grid-block__title{
-    @include fsz(15px);
+.icon-link {
+    font-weight: 700;
     letter-spacing: 3.5px;
-    font-weight: 700;
     text-transform: uppercase;
-    margin-bottom: 5px;
-  }
+    @include fsz(15px);
+    display: inline-block;
+    color: $white;
+    @media #{$header} {
+        text-align: center;
+    }
+    @media #{$phone} {
+        padding-left: 55px;
+        position: relative;
+        @include fsz(14px);
+    }
+
+    &:before {
+        content: "";
+        display: block;
+        width: 69px;
+        height: 70px;
+        background: url("images/model-icon.png") no-repeat center center;
+        background-size: cover;
+        margin: 0 auto 15px;
+        @media #{$phone} {
+            width: 35px;
+            height: 36px;
+            position: absolute;
+            top: -7px;
+            left: 0;
+        }
+    }
+
+    &:hover,
+    &:focus {
+        opacity: 0.5;
+    }
 }
 
-.newsletter-block{
-  position: fixed;
-  right: -377px;
-  top: 190px;
-  z-index: 10;
-  @media #{$phone} {
-    display: none;
-  }
-  &.active{
-    z-index: 11;
-    -webkit-animation: open 0.5s forwards;
-    animation: open 0.5s forwards;
-    .newsletter-block__content{
-      box-shadow: 0 23px 44px rgba(0,0,0,0.14);
+.grid-block {
+    padding: 87px 0 74px;
+    background-color: #E8E8E8;
+    @media #{$header} {
+        padding: 40px 0 20px;
     }
-  }
-  .newsletter-block__title{
-    text-transform: uppercase;
-    font-weight: 700;
-    @include fsz(13px);
-    transform: rotate(-90deg);
-    width: 193px;
-    height: 39px;
-    padding: 12px 10px 12px 12px;
-    background-color:$white;
-    position: absolute;
-    top: 77px;
-    left: -116px;
-    margin-bottom: 0;
-    box-shadow: 0 -10px 25px -19px rgba(0, 0, 0, 0.16) inset;
-    cursor: pointer;
-      svg{
-        width: 13px;
-        height: 13px;
-        margin-bottom: 3px;
-      }
-  }
-  .newsletter-block__info{
-    text-transform: uppercase;
-    font-weight: 700;
-    display: block;
-    margin-bottom: 5px;
-  }
-  .newsletter-block__content{
-    background-color:$white;
-    width: 376px;
-    padding: 18px 23px 42px;
-  }
-  .newsletter-block__description{
-    line-height: 1.8;
-  }
-}
+    @media #{$phone} {
+        padding: 10px 0 7px;
+    }
 
-.language-switcher{
-  position: fixed;
-  right: -127px;
-  top: 383px;
-  z-index: 10;
-  @media #{$phone} {
-    display: none;
-  }
-  &.active{
-    -webkit-animation: open 0.5s forwards;
-    animation: open 0.5s forwards;
-    .language-switcher__content{
-      box-shadow: 0 23px 44px rgba(0,0,0,0.14);
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
     }
-  }
-  .language-switcher__title{
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: 700;
-    @include fsz(13px);
-    transform: rotate(-90deg);
-    width: 193px;
-    height: 39px;
-    padding: 12px 10px 12px 12px;
-    background-color:$black;
-    color:$white;
-    position: absolute;
-    top: 77px;
-    left: -116px;
-    margin-bottom: 0;
-    box-shadow: 0 -10px 25px -19px rgba(0, 0, 0, 0.16) inset;
-    cursor: pointer;
-      svg{
-        width: 13px;
-        height: 13px;
-        margin-bottom: 3px;
-      }
-  }
-  .language-switcher__list{
-    background-color:$black;
-    width: 126px;
-    padding: 18px 23px 42px;
-    min-height: 193px;
-    .language-switcher__list-item{
-      margin-bottom:5px;
-      a{
+
+    .grid-block__item {
+        display: flex;
+        align-items: flex-end;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        height: 407px;
+        margin-bottom: 22px;
+        color: $white;
+        z-index: 2;
+
+        @media #{$phone} {
+            margin-bottom: 10px;
+        }
+
+        &:before {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 70%;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 21%, rgba(31, 34, 37, 0.83) 59%, rgba(31, 34, 37, 1) 100%); /* FF3.6-15 */
+            background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 21%, rgba(31, 34, 37, 0.83) 59%, rgba(31, 34, 37, 1) 100%); /* Chrome10-25,Safari5.1-6 */
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 21%, rgba(31, 34, 37, 0.83) 59%, rgba(31, 34, 37, 1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#1f2225', GradientType=0); /* IE6-9 */
+            z-index: -1;
+        }
+
+        &--1 {
+            width: calc(50% - 10px);
+            @media #{$phone} {
+                width: 100%;
+                height: 450px;
+            }
+
+            &:before {
+                height: 80%;
+            }
+        }
+
+        &--2 {
+            width: calc(50% - 10px);
+            @media #{$phone} {
+                width: 100%;
+                height: 450px;
+            }
+
+            &:before {
+                height: 80%;
+            }
+        }
+
+        &--3 {
+            width: 40.7%;
+            height: 337px;
+            @media #{$header} {
+                width: calc(33.3% - 13px);
+            }
+            @media #{$phone} {
+                width: 100%;
+                height: 450px;
+            }
+        }
+
+        &--4 {
+            width: 32.2%;
+            height: 337px;
+            @media #{$header} {
+                width: calc(33.3% - 13px);
+            }
+            @media #{$phone} {
+                width: 100%;
+                height: 450px;
+            }
+        }
+
+        &--5 {
+            width: 23.7%;
+            height: 337px;
+            @media #{$header} {
+                width: calc(33.3% - 13px);
+            }
+            @media #{$phone} {
+                width: 100%;
+                height: 450px;
+            }
+        }
+    }
+
+    .grid-block__content {
+        padding: 26px 44px 68px;
+
+        @media #{$desktop-small} {
+            padding: 25px 25px 68px;
+        }
+        @media #{$phone} {
+            text-align: center;
+            width: 100%;
+            padding: 25px 25px 70px;
+        }
+    }
+
+    .grid-block__title {
+        @include fsz(15px);
+        letter-spacing: 3.5px;
         font-weight: 700;
-        color:$white;
-      }
+        text-transform: uppercase;
+        margin-bottom: 5px;
     }
-  }
+
+    .btn--cover {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+
+        &:hover,
+        &:active,
+        &:focus {
+
+            .btn {
+                background-color: $dark-gray;
+                color: $white;
+            }
+        }
+
+        .btn {
+            position: absolute;
+            left: 44px;
+            bottom: 26px;
+            z-index: 1;
+
+            @media #{$phone} {
+                left: 50%;
+                transform: translate3d(-50%, 0, 0);
+            }
+        }
+    }
+}
+
+.newsletter-block {
+    position: fixed;
+    right: -377px;
+    top: 190px;
+    z-index: 10;
+    @media #{$phone} {
+        display: none;
+    }
+
+    &.active {
+        z-index: 11;
+        -webkit-animation: open 0.5s forwards;
+        animation: open 0.5s forwards;
+
+        .newsletter-block__content {
+            box-shadow: 0 23px 44px rgba(0, 0, 0, 0.14);
+        }
+    }
+
+    .newsletter-block__title {
+        text-transform: uppercase;
+        font-weight: 700;
+        @include fsz(13px);
+        transform: rotate(-90deg);
+        width: 193px;
+        height: 39px;
+        padding: 12px 10px 12px 12px;
+        background-color: $white;
+        position: absolute;
+        top: 77px;
+        left: -116px;
+        margin-bottom: 0;
+        box-shadow: 0 -10px 25px -19px rgba(0, 0, 0, 0.16) inset;
+        cursor: pointer;
+
+        svg {
+            width: 13px;
+            height: 13px;
+            margin-bottom: 3px;
+        }
+    }
+
+    .newsletter-block__info {
+        text-transform: uppercase;
+        font-weight: 700;
+        display: block;
+        margin-bottom: 5px;
+    }
+
+    .newsletter-block__content {
+        background-color: $white;
+        width: 376px;
+        padding: 18px 23px 42px;
+    }
+
+    .newsletter-block__description {
+        line-height: 1.8;
+    }
+}
+
+.language-switcher {
+    position: fixed;
+    right: -127px;
+    top: 383px;
+    z-index: 10;
+    @media #{$phone} {
+        display: none;
+    }
+
+    &.active {
+        -webkit-animation: open 0.5s forwards;
+        animation: open 0.5s forwards;
+
+        .language-switcher__content {
+            box-shadow: 0 23px 44px rgba(0, 0, 0, 0.14);
+        }
+    }
+
+    .language-switcher__title {
+        text-transform: uppercase;
+        text-align: center;
+        font-weight: 700;
+        @include fsz(13px);
+        transform: rotate(-90deg);
+        width: 193px;
+        height: 39px;
+        padding: 12px 10px 12px 12px;
+        background-color: $black;
+        color: $white;
+        position: absolute;
+        top: 77px;
+        left: -116px;
+        margin-bottom: 0;
+        box-shadow: 0 -10px 25px -19px rgba(0, 0, 0, 0.16) inset;
+        cursor: pointer;
+
+        svg {
+            width: 13px;
+            height: 13px;
+            margin-bottom: 3px;
+        }
+    }
+
+    .language-switcher__list {
+        background-color: $black;
+        width: 126px;
+        padding: 18px 23px 42px;
+        min-height: 193px;
+
+        .language-switcher__list-item {
+            margin-bottom: 5px;
+
+            a {
+                font-weight: 700;
+                color: $white;
+            }
+        }
+    }
 }
 
 @-webkit-keyframes open {
-  100% { right: 0; }
+    100% {
+        right: 0;
+    }
 }
 
 @keyframes open {
-  100% { right: 0; }
+    100% {
+        right: 0;
+    }
 }
 
