refactored expand triggers

--- a/wp-content/themes/intrepid/css/global/buttons.scss
+++ b/wp-content/themes/intrepid/css/global/buttons.scss
@@ -56,8 +56,9 @@ button[type="submit"] {
         &:hover,
         &:active,
         &:focus {
+            color: #6d0707;
             background-position: -170px;
-            background-color: #6d0707;
+            background-color: #ffffff;
         }
     }
 
