--- a/wp-content/themes/intrepid/css/templates/home.scss
+++ b/wp-content/themes/intrepid/css/templates/home.scss
@@ -137,21 +137,6 @@
             margin-bottom: 10px;
         }
 
-        &:before {
-            content: "";
-            display: block;
-            width: 100%;
-            height: 70%;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 21%, rgba(31, 34, 37, 0.83) 59%, rgba(31, 34, 37, 1) 100%); /* FF3.6-15 */
-            background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 21%, rgba(31, 34, 37, 0.83) 59%, rgba(31, 34, 37, 1) 100%); /* Chrome10-25,Safari5.1-6 */
-            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 21%, rgba(31, 34, 37, 0.83) 59%, rgba(31, 34, 37, 1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#1f2225', GradientType=0); /* IE6-9 */
-            z-index: -1;
-        }
-
         &--1 {
             width: calc(50% - 10px);
             @media #{$phone} {
@@ -226,6 +211,12 @@
         }
     }
 
+    .grid-block__inner {
+        position: relative;
+        margin-bottom: 25px;
+        z-index: 11;
+    }
+
     .grid-block__title {
         @include fsz(15px);
         letter-spacing: 3.5px;
@@ -240,16 +231,51 @@
         top: 0;
         width: 100%;
         height: 100%;
+        overflow: hidden;
         z-index: 10;
 
         &:hover,
         &:active,
         &:focus {
 
+            &:after {
+                opacity: 1;
+            }
+
             .btn {
                 background-color: $dark-gray;
                 color: $white;
             }
+        }
+
+        &:before {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 70%;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 21%, rgba(31, 34, 37, 0.83) 59%, rgba(31, 34, 37, 1) 100%); /* FF3.6-15 */
+            background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 21%, rgba(31, 34, 37, 0.83) 59%, rgba(31, 34, 37, 1) 100%); /* Chrome10-25,Safari5.1-6 */
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 21%, rgba(31, 34, 37, 0.83) 59%, rgba(31, 34, 37, 1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#1f2225', GradientType=0); /* IE6-9 */
+            transition: $transition;
+            z-index: -1;
+        }
+
+        &:after {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            background: radial-gradient(rgba(255, 255, 255, 0) 0%, rgba(31, 34, 37, 0.83) 100%);
+            opacity: 0;
+            transition: $transition;
+            z-index: -1;
         }
 
         .btn {
@@ -282,6 +308,10 @@
 
         .newsletter-block__content {
             box-shadow: 0 23px 44px rgba(0, 0, 0, 0.14);
+        }
+
+        .icon-arrow-up {
+            transform: rotate(180deg);
         }
     }
 
@@ -341,6 +371,10 @@
 
         .language-switcher__content {
             box-shadow: 0 23px 44px rgba(0, 0, 0, 0.14);
+        }
+
+        .icon-arrow-up {
+            transform: rotate(180deg);
         }
     }
 
