fix up deck plans

--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -1112,6 +1112,8 @@
         transform: rotate(90deg);
     }
 
+    &:hover,
+    &:focus,
     .deck-point--active & {
         background-color: #F4F4F4;
         border-color: #B0B0B0;
